package Entities;

public class Ticker {

    private String name;

    public Ticker(String name){
        this.name = name;
    }

    public void start(){

    }

}
